versions/3.0.4/docs/ProxyProfile.md
# ProxyProfile

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] [readonly] 
**name** | **str** |  | 
**resolution** | **str** |  | [optional] 
**rate_control** | **int** |  | [optional] 
**crf** | **int** |  | [optional] 
**bitrate** | **int** |  | [optional] 
**audio_bitrate** | **int** |  | [optional] 
**variants_limit** | **int** |  | [optional] 
**enable_realtime_read** | **bool** |  | [optional] 
**enable_dense_filmstrip** | **bool** |  | [optional] 
**enable_watermark** | **bool** |  | [optional] 
**watermark_image** | **str** |  | [optional] 
**watermark_position** | **int** |  | [optional] 
**watermark_opacity** | **float** |  | [optional] 
**watermark_size** | **float** |  | [optional] 
**lut** | **str** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


